--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Intro Infra App",
-  "short_name": "App",
+  "short_name": "Intro Infra",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
